<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    tools:context="com.example.pc.tabtest.MyStaticCalendar">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l1" >


        <TextView
            android:id="@+id/buttonDecember"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/winterbackground"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:layout_margin="10dp"
            android:text="@string/december"
            />

        <TextView
            android:id="@+id/buttonJanuary"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/winterbackground"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:layout_margin="10dp"
            android:text="@string/january"
            />

        <TextView
            android:id="@+id/buttonFebruary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/winterbackground"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:layout_margin="10dp"
            android:text="@string/february"
            />




        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l2"
        android:layout_below="@+id/l1">

        <TextView
            android:id="@+id/buttonMarch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/springbackground"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:layout_margin="10dp"
            android:text="@string/march"
            />

        <TextView
            android:id="@+id/buttonApril"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/springbackground"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:layout_margin="10dp"
            android:text="@string/april"
            />

        <TextView
            android:id="@+id/buttonMay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/springbackground"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:layout_margin="10dp"
            android:text="@string/may"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l3"
        android:layout_below="@+id/l2">


        <TextView
            android:id="@+id/buttonJune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/summerbackground"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_margin="10dp"
            android:text="@string/june"
            />

        <TextView
            android:id="@+id/buttonJuly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/summerbackground"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_margin="10dp"
            android:text="@string/july"
            />

        <TextView
            android:id="@+id/buttonAugust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/summerbackground"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:layout_margin="10dp"
            android:text="@string/august"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:id="@+id/l4"
        android:layout_below="@+id/l3">

        <TextView
            android:id="@+id/buttonSeptember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/autumnbackground"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:layout_margin="10dp"
            android:text="@string/september"
            />

        <TextView
            android:id="@+id/buttonOctober"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/autumnbackground"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:layout_margin="10dp"
            android:text="@string/october"
            />

        <TextView
            android:id="@+id/buttonNovember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/autumnbackground"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:layout_margin="10dp"
            android:text="@string/november"
            />


    </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
