<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pc.tabtest.NewUserRegistryForm">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/myscrol"
        android:orientation="vertical"

        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/buttonFormas"
        android:layout_alignStart="@+id/buttonFormas"
        >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"   />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <requestFocus />
            </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/insertpasswrd"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputpasswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/inputName"
                android:layout_margin="10dp"
                android:text="@string/insertEmail"
                android:textAppearance="?android:attr/textAppearanceLarge"   />

            <EditText
                android:id="@+id/inputanEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <requestFocus />

            </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/insertfirstname"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputfirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/insertlastname"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputlastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/insertstreetnumber"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputstreetname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/inserttown"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputtown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/insertpostalcode"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputpostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/inserttelephone"
            android:textAppearance="?android:attr/textAppearanceLarge"   />
        <EditText
            android:id="@+id/inputtelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonFormas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/myscrol"
            android:text="@string/sendOK"
            />

    </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressbar_for_registryNewUser"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="περιμένετε"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        />

</RelativeLayout>
